# universal-turing-machine

./: tm.input  universal-turing-machine.cabal
src/: Main.hs
src/TM/Parser/: Config.hs  TuringMachine.hs
src/TM/Types/: Config.hs  TuringMachine.hs
