name:                universal-turing-machine
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          ikidon@fit.vutbr.cz
copyright:           2017 Marek Kidon
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable universal-turing-machine
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                       , optparse-applicative
  default-language:    Haskell2010
  other-modules:       TM.Types.Config
                       TM.Types.TuringMachine
                       TM.Parser.Config
                       TM.Parser.TuringMachine
